Added HTML buttons with no functions yet

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-  <title>Document</title>
+  <title>Currency Exchanger</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Get the USD conversion rate</h1>
+    <label for="usd">Enter USD dollars: </label>
+    <input id="usd" type="text">
+    <h5>Click any button to convert it!</h5>
+    <button class="btn-success" id="eur">EUR (Euro)</button>
+    <button class="btn-success" id="jpy">JPY (Japanese Yen)</button>
+    <button class="btn-success" id="cad">CAD(Canadian Dollar)</button>
+    <button class="btn-success" id="aud">AUD(Australian Dollar)</button>
+    <button class="btn-success" id="cad">GBP(Pound Sterling)</button>
+    <div class="conversion"></div>
+  </div>
   
 </body>
 </html>
