--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <div class="container">
     <h1>Get the USD conversion rate</h1>
     <label for="usd">Enter USD dollars: </label>
-    <input id="usd" type="text">
+    <input id="usd" type="number">
     <h5>Select any currency to convert!</h5>
     <select class="form-control" id="currencyType" type="text">
       <option value="EUR">EUR(Euro)</option>
