--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,11 @@
       <option value="GBP">GBP(Pound Sterling)</option>
       <option value="AUD">AUD(Australian Dollar)</option>
       <option value="CAD">CAD(Candian Dollar)</option>
+      <option value="MON">MON(MONOPOLY MONEY)</option>
     </select>
     <br>
-    <button class="btn-success" id="bikes">Convert!</button>
+    <button class="btn-success" id="convert">Convert!</button>
+    <br>
     <div class="conversion"></div>
   </div>
 
