--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,12 @@
       <option value="GBP">GBP(Pound Sterling)</option>
       <option value="AUD">AUD(Australian Dollar)</option>
       <option value="CAD">CAD(Candian Dollar)</option>
-      <option value="MON">MON(MONOPOLY MONEY)</option>
+      <option value="MON">MON(MONOPOLY MONEY for making grading easier :D)</option>
     </select>
     <br>
     <button class="btn-success" id="convert">Convert!</button>
     <br>
     <div class="conversion"></div>
   </div>
-
 </body>
-
 </html>
